@@ -33,8 +33,6 @@ import org.netbeans.modules.gradle.api.output.OutputProcessorFactory;
 import java.io.File;
 import java.net.MalformedURLException;
 import java.net.URL;
-import java.util.Arrays;
-import java.util.HashSet;
 import java.util.Set;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
@@ -43,6 +41,11 @@ import org.netbeans.modules.gradle.api.execute.RunUtils;
 import org.netbeans.spi.project.ProjectServiceProvider;
 import org.openide.filesystems.FileObject;
 import org.openide.filesystems.FileUtil;
+import org.openide.windows.IOColors;
+import static org.openide.windows.IOColors.OutputType.LOG_DEBUG;
+import static org.openide.windows.IOColors.OutputType.LOG_FAILURE;
+import static org.openide.windows.IOColors.OutputType.LOG_SUCCESS;
+import static org.openide.windows.IOColors.OutputType.LOG_WARNING;
 
 /**
  *
@@ -51,51 +54,18 @@ import org.openide.filesystems.FileUtil;
 @ProjectServiceProvider(service = OutputProcessorFactory.class, projectType = NbGradleProject.GRADLE_PROJECT_TYPE)
 public class GradleProcessorFactory implements OutputProcessorFactory {
 
-    private static final OutputProcessor URL_PROCESSOR = new URLOutputProcessor();
-    private static final OutputProcessor GRADLE_PROCESSOR = new GradleOutputProcessor();
-    private static final OutputProcessor JAVAC_PROCESSOR = new JavaCompilerProcessor();
-    private static final OutputProcessor GROOVYC_PROCESSOR = new GroovyCompilerProcessor();
-
-
     @Override
     public Set<? extends OutputProcessor> createOutputProcessors(RunConfig cfg) {
-        return new HashSet<>(Arrays.asList(
-                URL_PROCESSOR,
+        return Set.of(
                 GRADLE_PROCESSOR,
                 JAVAC_PROCESSOR,
                 GROOVYC_PROCESSOR,
                 new WarningModeAllProcessor(cfg)
-        ));
+        );
     }
 
-    static final class URLOutputProcessor implements OutputProcessor {
 
-        private static final Pattern URL_PATTERN = Pattern.compile("(((https?|ftp|file)://|file:/)[-a-zA-Z0-9+&@#/%?=~_|!:,.;]*[-a-zA-Z0-9+&@#/%=~_|])");
-
-        @Override
-        public boolean processLine(OutputDisplayer out, String line) {
-            Matcher m = URL_PATTERN.matcher(line);
-            int last = 0;
-            while (m.find()) {
-                String txt = line.substring(last, m.start());
-                String lnk = line.substring(m.start(), m.end());
-                last = m.end();
-                out.print(txt);
-                try {
-                    out.print(lnk, OutputListeners.openURL(new URL(lnk)));
-                } catch(MalformedURLException ex) {
-                    out.print(lnk);
-                }
-            }
-            if (last > 0) {
-                out.print(line.substring(last));
-            }
-            return last > 0;
-        }
-
-    }
-
-    static class GradleOutputProcessor implements OutputProcessor {
+    public static final OutputProcessor GRADLE_PROCESSOR = new OutputProcessor() {
 
         private static final Pattern GRADLE_ERROR = Pattern.compile("(Build file|Script) '(.*)\\.gradle' line: ([0-9]+)");
 
@@ -118,9 +88,9 @@ public class GradleProcessorFactory implements OutputProcessorFactory {
             }
             return false;
         }
-    }
+    };
 
-    static class JavaCompilerProcessor implements OutputProcessor {
+    public static final OutputProcessor JAVAC_PROCESSOR = new OutputProcessor() {
 
         private static final Pattern JAVA_ERROR = Pattern.compile("(.*)\\.java\\:([0-9]+)\\: (error|warning)\\:(.*)");
 
@@ -146,10 +116,9 @@ public class GradleProcessorFactory implements OutputProcessorFactory {
             }
             return false;
         }
+    };
 
-    }
-
-    static class GroovyCompilerProcessor implements OutputProcessor {
+    public static final OutputProcessor GROOVYC_PROCESSOR = new OutputProcessor() {
 
         private static final Pattern GROOVY_ERROR = Pattern.compile("(.*)\\.groovy\\: ([0-9]+)\\: (.+)");
         private static final Pattern COLUMN_INFO = Pattern.compile(" @ line ([0-9]+), column ([0-9]+)\\.$");
@@ -185,7 +154,82 @@ public class GradleProcessorFactory implements OutputProcessorFactory {
             return false;
         }
 
-    }
+    };
+
+    public static final OutputProcessor URL_PROCESSOR = new OutputProcessor() {
+
+        private static final Pattern URL_PATTERN = Pattern.compile("(((https?|ftp|file)://|file:/)[-a-zA-Z0-9+&@#/%?=~_|!:,.;]*[-a-zA-Z0-9+&@#/%=~_|])");
+
+        @Override
+        public boolean processLine(OutputDisplayer out, String line) {
+            Matcher m = URL_PATTERN.matcher(line);
+            int last = 0;
+            while (m.find()) {
+                String txt = line.substring(last, m.start());
+                String lnk = line.substring(m.start(), m.end());
+                last = m.end();
+                out.print(txt);
+                try {
+                    out.print(lnk, OutputListeners.openURL(new URL(lnk)));
+                } catch(MalformedURLException ex) {
+                    out.print(lnk);
+                }
+            }
+            if (last > 0) {
+                out.print(line.substring(last));
+            }
+            return last > 0;
+        }
+
+    };
+
+    public static final OutputProcessor TASK_LINE_PROCESSOR = new OutputProcessor() {
+        final Pattern TASK_LINE = Pattern.compile("> Task (:[\\w:\\-]+)( [\\w\\-]+)?"); //NOI18N
+        @Override
+        public boolean processLine(OutputDisplayer out, String line) {
+            Matcher m = TASK_LINE.matcher(line);
+            boolean ret = m.matches();
+            if (ret) {
+                String task = m.group(1);
+                String state = m.group(2);
+                out.print("> Task "); //NOI18N
+                out.print(task);
+                if (state != null) {
+                    IOColors.OutputType type = LOG_WARNING;
+                    if (state.endsWith("EXECUTED") || state.endsWith("UP-TO-DATE") || state.endsWith("FROM-CACHE")) { //NOI18N
+                        type = LOG_SUCCESS;
+                    } else if (state.endsWith("FAILED")) { //NOI18N
+                        type = LOG_FAILURE;
+                    }
+                    out.print(state , null, type);
+                }
+            }
+            return ret;
+        }
+    };
+
+    public static final OutputProcessor STATIC_STRING_PROCESSOR = new OutputProcessor() {
+        private static final String BUILD_FAILED_MSG = "BUILD FAILED"; //NOI18N
+        private static final String BUILD_SUCCESS_MSG = "BUILD SUCCESSFUL"; //NOI18N
+        private static final String COD_INCUBATION_MSG = "Configuration on demand is an incubating feature."; //NOI18N
+        private static final String CONFIG_CACHE_MGS = "Configuration cache "; //NOI18N
+
+        @Override
+        public boolean processLine(OutputDisplayer out, String line) {
+            IOColors.OutputType type = null;
+            if (line.startsWith(COD_INCUBATION_MSG) || line.startsWith(CONFIG_CACHE_MGS)) {
+                type = LOG_DEBUG;
+            } else if (line.startsWith(BUILD_SUCCESS_MSG)) {
+                type = LOG_SUCCESS;
+            } else if (line.startsWith(BUILD_FAILED_MSG)) {
+                type = LOG_FAILURE;
+            }
+            if (type != null) {
+                out.print(line, null, type);
+            }
+            return type != null;
+        }
+    };
 
     static class WarningModeAllProcessor implements OutputProcessor {
 
